avoid part-tag overlapping code

--- a/frontend/styling/solution-code.css
+++ b/frontend/styling/solution-code.css
@@ -11,7 +11,7 @@ body main {
       display: flex;
       gap: 1rem;
       margin-top: 1.5rem;
-      margin-bottom: 2rem;
+      margin-bottom: 3rem;
       align-items: center;
 
       button {
@@ -50,14 +50,14 @@ body main {
         position: relative;
         cursor: pointer;
         height: 90px;
-        top: -60px;
+        top: -83px;
         filter: brightness(65%);
         transition: all 0.2s;
       }
       
       .one-tag {
         transform-origin: right;
-        right: 40px;
+        right: 25px;
         transform: rotate(-8deg);
         
         &:hover {
@@ -67,7 +67,7 @@ body main {
 
       .two-tag {
         transform-origin: left;
-        left: 40px;
+        left: 25px;
         transform: rotate(8deg);
 
         &:hover {
